--- a/src/components/LocationDetails/LocationDetails.css
+++ b/src/components/LocationDetails/LocationDetails.css
@@ -2,15 +2,20 @@
 .details-container {
   max-width: 1200px;
   margin: auto;
+  margin-top: 60px;
   padding: 20px;
   font-family: Arial, sans-serif;
 }
 
+.middle-container{
+  margin-top: 240px;
+}
 /* Title & Subtext */
 .details-container h1 {
   font-size: 28px;
   font-weight: bold;
   margin-bottom: 5px;
+  
 }
 
 .details-container h2 {
@@ -98,7 +103,7 @@
   display: flex;
   justify-content: space-between;
   gap: 20px;
-  margin-top: 250px;
+  margin-top: 50px;
   margin-bottom: 30px;
 }
 
@@ -187,6 +192,7 @@
   color: white;
   font-size: 18px;
   padding: 12px;
+  margin-bottom: 10px;
   border: none;
   border-radius: 10px;
   cursor: pointer;
