--- a/src/components/TopHeader/HomePageHeader.css
+++ b/src/components/TopHeader/HomePageHeader.css
@@ -1,14 +1,16 @@
+
 .header {
     display: flex;
     height: 48px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    padding: 10px;
+    padding: 10px;
     justify-content: space-between;
     align-items: center;
     position: sticky;
     top: 0;
     z-index: 100;
     width: 100%;
+    background-color: black;
     
 }
 
